[TBCM-219] css fix for gap matrix

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -138,7 +138,6 @@ thead th {
 
 .activity-gap-table tbody {
   overflow: scroll;
-  height: 200px;
 }
 
 /* MAKE LEFT COLUMN FIXED */
